# quassel

./: .clang-format  .craftsettings.ini  .gitmodules  AUTHORS  CMakeLists.txt  ChangeLog  Doxyfile  LICENSING.md  REUSE.toml  version.h.in
src/: CMakeLists.txt
src/client/: CMakeLists.txt  abstractmessageprocessor.cpp  abstractmessageprocessor.h  abstractui.h  backlogrequester.cpp  backlogrequester.h  backlogsettings.cpp  backlogsettings.h  buffermodel.cpp  buffermodel.h  buffersettings.cpp  buffersettings.h  bufferviewoverlay.cpp  bufferviewoverlay.h  client.cpp  client.h  clientaliasmanager.cpp  clientaliasmanager.h  clientauthhandler.cpp  clientauthhandler.h  clientbacklogmanager.cpp  clientbacklogmanager.h  clientbufferviewconfig.cpp  clientbufferviewconfig.h  clientbufferviewmanager.cpp  clientbufferviewmanager.h  clientidentity.cpp  clientidentity.h  clientignorelistmanager.cpp  clientignorelistmanager.h  clientirclisthelper.cpp  clientirclisthelper.h  clientsettings.cpp  clientsettings.h  clienttransfer.cpp  clienttransfer.h  clienttransfermanager.cpp  clienttransfermanager.h  clientuserinputhandler.cpp  clientuserinputhandler.h  (+22 more)
src/common/: CMakeLists.txt  abstractsignalwatcher.h  aliasmanager.cpp  aliasmanager.h  authhandler.cpp  authhandler.h  backlogmanager.cpp  backlogmanager.h  backtrace_config.h.in  basichandler.cpp  basichandler.h  bufferinfo.cpp  bufferinfo.h  buffersyncer.cpp  buffersyncer.h  bufferviewconfig.cpp  bufferviewconfig.h  bufferviewmanager.cpp  bufferviewmanager.h  compressor.cpp  compressor.h  coreinfo.cpp  coreinfo.h  ctcpevent.cpp  (+85 more)
(+733 files in other folders)
